--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 여기에 Apache Commons Net 의존성을 추가
+	implementation 'commons-net:commons-net:3.10.0'
 }
 
 tasks.named('test') {
